--- a/conf/nginx/conf.d/website.fastadmin.com.conf
+++ b/conf/nginx/conf.d/website.fastadmin.com.conf
@@ -9,6 +9,11 @@ server {
     location / {
         root   /var/www/html/fastadmin/public;
         index  index.html index.htm index.php;
+
+        if (!-e $request_filename) {
+            rewrite  ^/(.*)$ /index.php?s=$1  last;
+            break;
+        }
     }
 
     #error_page  404              /404.html;
@@ -34,6 +39,8 @@ server {
         fastcgi_index  index.php;
         include        fastcgi_params;
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+        fastcgi_split_path_info ^(.+\.php)(.*)$;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
     #location ~ ^.+.php {
